Sniff out the canonical constructor using detective work rather than a flag which isn't there.
PiperOrigin-RevId: 737675769