@@ -15,6 +15,8 @@
  */
 package com.google.errorprone.bugpatterns.argumentselectiondefects;
 
+import static com.google.common.truth.TruthJUnit.assume;
+
 import com.google.common.collect.ImmutableSet;
 import com.google.errorprone.BugPattern;
 import com.google.errorprone.BugPattern.SeverityLevel;
@@ -397,6 +399,31 @@ class Test {
 
 record Foo(String first, String second) {}
 """)
+        .doTest();
+  }
+
+  public record Foo(String first, String second) {}
+
+  @Test
+  public void recordPattern() {
+    assume().that(Runtime.version().feature()).isAtLeast(21);
+    testHelper
+        .addSourceLines(
+            "Test.java",
+            """
+            import %s;
+            class Test {
+              String test(Object o) {
+                return switch (o) {
+                  case Foo(String first, String second) -> first;
+                  default -> "";
+                };
+              }
+            }
+
+            """
+                .formatted(Foo.class.getCanonicalName()))
+        .setArgs("--enable-preview", "--release", Integer.toString(Runtime.version().feature()))
         .doTest();
   }
 }
